--- a/docs/PV/pv_20181130.md
+++ b/docs/PV/pv_20181130.md
@@ -8,7 +8,7 @@ Version 1.0.0
 
 ## Sprint end meeting - Sprint #0
 
-The meeting started on 30.11.2018 at xx:xx
+The meeting started on 30.11.2018
 
 ### Participants
 
