--- a/docs/PV/pv_20190111.md
+++ b/docs/PV/pv_20190111.md
@@ -23,12 +23,12 @@ The meeting started on 11.01.2019 at 11:45 and finished at 12:10
 
 ### Content
 
-Demo fonctionnalités et explications des problèmes durant le sprint
-Deployer laravel joutes sur swisscenter pour partie login (critiques)
-endpoints officiels sur joutes.mycpnv.ch
-Deployer mnt ou après ?
+Demo features and explanations of problems during the sprint
+Deploy laravel games on swisscenter for login part (critical)
+official endpoints on joutes.mycpnv.ch
+Deploy the laravel project as soon as possible or wait until the official endpoints phase is completed
 New Issues
-* Déploiement app Store android et IOS (cout)
-* Changer les routes via /api
+* Mobile store deployment: android and IOS (cost)
+* Change current routes into dynamic ones with /api
 
 
